--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.6.0",
+    "@reduxjs/toolkit": "^2.6.1",
     "@tailwindcss/postcss": "^4.0.9",
     "firebase": "^11.4.0",
     "framer-motion": "^12.4.10",
@@ -19,6 +19,8 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
+    "react-router-dom": "^7.4.0",
+    "redux-persist": "^6.0.0",
     "tailwindcss": "^4.0.9"
   },
   "devDependencies": {
